# easyshare-server

./: Cargo.toml  Dockerfile  recipe.json
public/: styles.css
src/: main.rs
src/routes/: home.rs  mod.rs  object.rs  share.rs  upload.rs
src/ui/: layout.rs
static/: styles.css
